deploy some new code

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
       integrity="sha512-WCpqx+XpCCKbswUyAu3UitRHkDDpVOWENg0WtrVaDalYfUMHpS2Y0BYl3gd9lOiJGeFwMUbPUCb7E9Dnl5JjPg=="
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <title>Developers Platform</title>
   </head>
   <body>
