deploy some new code....

--- a/public/index.html
+++ b/public/index.html
@@ -17,30 +17,20 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-      integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/infinite-ajax-scroll/3.0.0-beta.6/infinite-ajax-scroll.min.js"
-      integrity="sha512-WCpqx+XpCCKbswUyAu3UitRHkDDpVOWENg0WtrVaDalYfUMHpS2Y0BYl3gd9lOiJGeFwMUbPUCb7E9Dnl5JjPg=="
-      crossorigin="anonymous"
-    ></script>
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css"
       rel="stylesheet"
     />
-    <title>Developers Platform</title>
+
+    <title>Severe Storms Media</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but codesandbox doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
+        >We're sorry but Severe Storms Media doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
